--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -64,7 +64,7 @@ steps:
       git config --global user.email "cage.chung@gmail.com"
       git config --global user.name "Kai-Chu Chung"
       git commit -m "auto build by $PROJECT_ID"
-      git push origin master
+      git push origin -f master
     volumes:
     - name: 'ssh'
       path: /root/.ssh      
