--- a/data/carousel/1.yaml
+++ b/data/carousel/1.yaml
@@ -1,5 +1,5 @@
 weight: 1
-title: "GCPUG Taipei Meetup #45 Recap"
+title: "GDGCloud Taipei Meetup #45 Recap"
 description: >
   <ul class="list-style-none">
      <li>2019年3月20日（星期三）</li>
