--- a/data/carousel/2.yaml
+++ b/data/carousel/2.yaml
@@ -1,5 +1,5 @@
 weight: 0
-title: "GCPUG Taipei Meetup #44"
+title: "GDGCloud Taipei Meetup #44"
 description: >
   <ul class="list-style-none">
      <li>2019年1月9日（星期三）</li>
