--- a/data/carousel/4.yaml
+++ b/data/carousel/4.yaml
@@ -1,5 +1,5 @@
 weight: 1
-title: "GCPUG Taipei Meetup #46 Cloud Next 19 Extended"
+title: "GDGCloud Taipei Meetup #46 Cloud Next 19 Extended"
 description: >
   <ul class="list-style-none">
      <li>2019年4月24日（星期三）</li>
