--- a/data/carousel/5.yaml
+++ b/data/carousel/5.yaml
@@ -1,5 +1,5 @@
 weight: 0
-title: "GCPUG Taipei Meetup #47"
+title: "GDGCloud Taipei Meetup #47"
 description: >
   <ul class="list-style-none">
      <li>2019/6/4</li>
